[package]
name = "dsf-daemon"
repository = "https://github.com/dist-svc/dsf-daemon"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "GPL-3.0"
publish = false

[features]
profile = []
default = [ "libsqlite3-sys/bundled" ] 

# Debian packaging metadata (for cargo-deb)
[package.metadata.deb]
priority = "optional"
depends = "$auto, systemd, openssl"
assets = [
    ["target/release/dsfd", "/usr/bin/dsfd",                    "0755"],
    ["dsfd.env",            "/etc/dsfd/dsfd.env",               "0644"],
    ["dsfd.service",        "/lib/systemd/system/dsfd.service", "0644"],
]
conf-files = [
  "/etc/dsfd/dsfd.env",
]

[dependencies]
futures = "0.3.4"
colored = "1.9.0"
tracing = "0.1.10"
tracing-futures = "0.2.0"
tracing-subscriber = "0.1.6"
futures_codec = "0.3.4"
async-trait = "0.1.21"
bytes = "0.5.3"
derive_builder = "0.9.0"
serde_json = "1.0.44"
base64 = "0.11.0"
chrono-humanize = "0.0.11"
tempdir = "0.3.7"
bitflags = "1.2.1"
get_if_addrs = "0.5.3"
libmdns = "0.2.4"
mdns = "1.0.0"
strum = "0.17.1"
flame = "0.2.2"
flamer = "0.4.0"
ctrlc = "3.1.3"

[dependencies.dsf-core]
version = "0.1.0"
features = [ "serde" ]

[dependencies.dsf-rpc]
version = "0.1.0"

[dependencies.kad]
version = "0.5.0"

[dependencies.async-std]
version = "1.5.0"
features = [ "unstable" ]

[dependencies.log]
features = ["max_level_trace", "release_max_level_info"]
version = "0.4.6"

[dependencies.diesel]
features = [ "sqlite", "extras", "chrono" ]
version = "1.4.3"

[dependencies.libsqlite3-sys]
version = "0.9.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.igd]
version = "0.10.0"
features = [ "aio" ]

[dependencies.structopt]
version = "0.3.5"

[dependencies.humantime]
version = "2.0.0"

[dev-dependencies]
tempdir = "0.3.7"
rr-mux = "0.10.1"
rand = "0.7.3"
indicatif = "0.13.0"
dsf-client = "0.1.0"

[[bin]]
name = "dsfd"
path = "src/bin/dsfd.rs"

[[bin]]
name = "dsfm"
path = "src/bin/dsfm.rs"

